--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: template
-edit_uri: https://github.com/bgacademy23/template/blob/main/docs
+site_name: TEMPLATE
+edit_uri: https://github.com/bgacademy23/TEMPLATE/blob/main/docs
 
 nav:
     - Home: README.md
